argo-cd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argo-cd
  labels:
    istio-injection: enabled
