argo-cd/peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: mtls-disable
  namespace: argo-cd
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argo-cd
  mtls:
    mode: DISABLE
